--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,17 +1,27 @@
 # 1.2.0
+
 修复在所见所得版本中（0.13.14）无法使用的 bug 。
 
 # 1.3.1
-修复 `image-auto-upload` 字段失效的bug。
+
+修复 `image-auto-upload` 字段失效的 bug。
 
 # 1.3.2
+
 修复拖拽上传时错误上传所有文件。
 
 # 2.0.0
+
 部分功能支持 PicGo-Core。
 
 # 2.0.2
-修复有时上传失败的bug
+
+修复有时上传失败的 bug
 
 # 2.0.3
+
 放出原始的 picgo-core 错误信息
+
+# 2.0.4
+
+fix #31
